--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ CSS INDEX
   --ul-gray2: #D9D9D9;
   --ul-gray3: #585858;
   --ul-gradient: linear-gradient(105.18deg, var(--ul-primary) 0%, var(--ul-secondary) 100%);
-  --ul-2-primary: #7444FD;
+  --ul-2-primary: #F7A406;
   --ul-2-black: #282C32;
   --ul-2-gray: #585B6F;
   --font-primary: 'DM Sans', "Poppins", "Plus Jakarta Sans", serif;
